Test cases are added and JaCoCo plugin